// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parseCSVReport — SEIS Student Goals Report (CSV) falls back to the generic parser when columns are shifted (5-of-6 miss) 1`] = `
{
  "errors": [],
  "metadata": {
    "columnsDetected": [
      "Row #",
      "SEIS ID",
      "District ID",
      "Last Name",
      "First Name",
      "Birthdate",
      "Grade",
      "School of Attendance",
      "District of Service",
      "Case Manager",
      "IEP Date",
      "Eligibility Status",
      "Area Of Need",
      "Annual Goal #",
      "Baseline",
      "Goal",
      "Purpose(s) of Goal",
      "Standard",
      "Person Responsible",
      "Objective 1",
      "Objective 1 Met",
      "Objective 1 Date Met",
      "Objective 2",
      "Objective 2 Met",
      "Objective 2 Date Met",
      "Objective 3",
      "Objective 3 Met",
      "Objective 3 Date Met",
      "Progress Report 1 Summary ",
      "Progress Report 1 Comments  ",
      "Progress Report 2 Summary ",
      "Progress Report 2 Comments  ",
      "Progress Report 3 Summary ",
      "Progress Report 3 Comments  ",
      "Progress Report 4 Summary ",
      "Progress Report 4 Comments  ",
      "Progress Report 5 Summary ",
      "Progress Report 5 Comments  ",
      "Progress Report 6 Summary ",
      "Progress Report 6 Comments  ",
      "Goal Met",
      "Created By",
      "Created Date",
      "Last Modified By",
      "Last Modified Date",
      "Reporting Progress",
      "Comparison To Goal",
      "Progress Percentage",
      "Grade Level Standard",
      "Curriculum",
      "Frequency",
      "Assessment Method",
      "Owner",
      "Owner Email",
      "Case Manager Email",
      "Record Locked",
      "Record Status",
      "Source System",
      "Export Batch",
      "Export Timestamp",
    ],
    "formatDetected": "generic",
    "goalsFiltered": undefined,
    "targetStudentFound": undefined,
    "totalRows": 12,
  },
  "students": [
    {
      "firstName": "Ana",
      "goals": [
        "Academic #1: 2026 - 2027",
        "By 5/1/2027, given a grade-level passage, Ana will read 90 words per minute with 95% accuracy in 3 of 4 trials.",
        "Academic #2",
        "By 5/1/2027, Ana will write a personal narrative with a beginning, middle, and end in 4 of 5 samples.",
      ],
      "gradeLevel": "1",
      "iepDate": undefined,
      "initials": "AA",
      "lastName": "Alvarez",
      "rawRow": 2,
      "schoolOfAttendance": undefined,
    },
    {
      "firstName": "Ben",
      "goals": [
        "Academic #2: 2025 - 2026",
        "By 10/15/2026, given manipulatives, Ben will solve two-digit addition problems with 80% accuracy across 3 sessions.",
      ],
      "gradeLevel": "2",
      "iepDate": undefined,
      "initials": "BB",
      "lastName": "Bishop",
      "rawRow": 3,
      "schoolOfAttendance": undefined,
    },
    {
      "firstName": "Cora",
      "goals": [
        "Speech (1 of 1)",
        "By 1/20/2027, Cora will produce /r/ in structured sentences with 80% accuracy in 4 of 5 trials.",
      ],
      "gradeLevel": "3",
      "iepDate": undefined,
      "initials": "CC",
      "lastName": "Cho",
      "rawRow": 4,
      "schoolOfAttendance": undefined,
    },
    {
      "firstName": "Drew",
      "goals": [
        "Behavior (1 of 2)",
        "By 2/10/2027, Drew will use a coping strategy when frustrated in 4 of 5 observed opportunities.",
      ],
      "gradeLevel": "4",
      "iepDate": undefined,
      "initials": "DD",
      "lastName": "Diaz",
      "rawRow": 5,
      "schoolOfAttendance": undefined,
    },
    {
      "firstName": "Ella",
      "goals": [
        "OT (1 of 1)",
        "By 3/5/2027, Ella will copy a five-word sentence legibly within 5 minutes in 4 of 5 trials.",
      ],
      "gradeLevel": "5",
      "iepDate": undefined,
      "initials": "EE",
      "lastName": "Evans",
      "rawRow": 6,
      "schoolOfAttendance": undefined,
    },
    {
      "firstName": "Finn",
      "goals": [
        "Academic #3",
        "By 4/12/2027, Finn will form lower-case letters with correct size and spacing in 4 of 5 samples.",
      ],
      "gradeLevel": "TK",
      "iepDate": undefined,
      "initials": "FF",
      "lastName": "Foster",
      "rawRow": 7,
      "schoolOfAttendance": undefined,
    },
    {
      "firstName": "Gia",
      "goals": [
        "By 5/9/2027, Gia will raise her hand and wait to be called on in 4 of 5 opportunities.",
      ],
      "gradeLevel": "1",
      "iepDate": undefined,
      "initials": "GG",
      "lastName": "Gomez",
      "rawRow": 8,
      "schoolOfAttendance": undefined,
    },
    {
      "firstName": "Hana",
      "goals": [
        "Comm (1 of 1)",
        "By 1/30/2027, Hana will answer wh- questions about a short story with 80% accuracy.",
      ],
      "gradeLevel": "2",
      "iepDate": undefined,
      "initials": "HH",
      "lastName": "Hunt",
      "rawRow": 9,
      "schoolOfAttendance": undefined,
    },
    {
      "firstName": "Ivan",
      "goals": [
        "Academic #1",
        "By 2/22/2027, Ivan will write a three-sentence paragraph with a topic sentence in 4 of 5 samples.",
      ],
      "gradeLevel": "3",
      "iepDate": undefined,
      "initials": "II",
      "lastName": "Ingram",
      "rawRow": 10,
      "schoolOfAttendance": undefined,
    },
    {
      "firstName": "Jae",
      "goals": [
        "Academic #1",
        "By 6/1/2027 Jae will:
- decode multisyllabic words
- read 100 wpm with 95% accuracy",
      ],
      "gradeLevel": "4",
      "iepDate": undefined,
      "initials": "JJ",
      "lastName": "Jones",
      "rawRow": 11,
      "schoolOfAttendance": undefined,
    },
  ],
  "warnings": [],
}
`;

exports[`parseCSVReport — SEIS Student Goals Report (CSV) parses the full fixture (no role filter) into the golden snapshot 1`] = `
{
  "errors": [],
  "metadata": {
    "columnsDetected": [
      "SEIS ID",
      "District ID",
      "Last Name",
      "First Name",
      "Birthdate",
      "Grade",
      "School of Attendance",
      "District of Service",
      "Case Manager",
      "IEP Date",
      "Eligibility Status",
      "Area Of Need",
      "Annual Goal #",
      "Baseline",
      "Goal",
      "Purpose(s) of Goal",
      "Standard",
      "Person Responsible",
      "Objective 1",
      "Objective 1 Met",
      "Objective 1 Date Met",
      "Objective 2",
      "Objective 2 Met",
      "Objective 2 Date Met",
      "Objective 3",
      "Objective 3 Met",
      "Objective 3 Date Met",
      "Progress Report 1 Summary ",
      "Progress Report 1 Comments  ",
      "Progress Report 2 Summary ",
      "Progress Report 2 Comments  ",
      "Progress Report 3 Summary ",
      "Progress Report 3 Comments  ",
      "Progress Report 4 Summary ",
      "Progress Report 4 Comments  ",
      "Progress Report 5 Summary ",
      "Progress Report 5 Comments  ",
      "Progress Report 6 Summary ",
      "Progress Report 6 Comments  ",
      "Goal Met",
      "Created By",
      "Created Date",
      "Last Modified By",
      "Last Modified Date",
      "Reporting Progress",
      "Comparison To Goal",
      "Progress Percentage",
      "Grade Level Standard",
      "Curriculum",
      "Frequency",
      "Assessment Method",
      "Owner",
      "Owner Email",
      "Case Manager Email",
      "Record Locked",
      "Record Status",
      "Source System",
      "Export Batch",
      "Export Timestamp",
    ],
    "formatDetected": "seis-student-goals",
    "goalsFiltered": 0,
    "targetStudentFound": undefined,
    "totalRows": 12,
  },
  "students": [
    {
      "firstName": "Ana",
      "goals": [
        "By 5/1/2027, given a grade-level passage, Ana will read 90 words per minute with 95% accuracy in 3 of 4 trials.",
        "By 5/1/2027, Ana will write a personal narrative with a beginning, middle, and end in 4 of 5 samples.",
      ],
      "gradeLevel": "1",
      "iepDate": "2026-05-01",
      "initials": "AA",
      "lastName": "Alvarez",
      "rawRow": 2,
      "schoolOfAttendance": "Mt Diablo Elementary School",
    },
    {
      "firstName": "Ben",
      "goals": [
        "By 10/15/2026, given manipulatives, Ben will solve two-digit addition problems with 80% accuracy across 3 sessions.",
      ],
      "gradeLevel": "2",
      "iepDate": "2025-10-15",
      "initials": "BB",
      "lastName": "Bishop",
      "rawRow": 3,
      "schoolOfAttendance": "St Mary School",
    },
    {
      "firstName": "Cora",
      "goals": [
        "By 1/20/2027, Cora will produce /r/ in structured sentences with 80% accuracy in 4 of 5 trials.",
      ],
      "gradeLevel": "3",
      "iepDate": "2026-01-20",
      "initials": "CC",
      "lastName": "Cho",
      "rawRow": 4,
      "schoolOfAttendance": "Mt Diablo Elementary School",
    },
    {
      "firstName": "Drew",
      "goals": [
        "By 2/10/2027, Drew will use a coping strategy when frustrated in 4 of 5 observed opportunities.",
      ],
      "gradeLevel": "4",
      "iepDate": "2026-02-10",
      "initials": "DD",
      "lastName": "Diaz",
      "rawRow": 5,
      "schoolOfAttendance": "Out of District- MOU",
    },
    {
      "firstName": "Ella",
      "goals": [
        "By 3/5/2027, Ella will copy a five-word sentence legibly within 5 minutes in 4 of 5 trials.",
      ],
      "gradeLevel": "5",
      "iepDate": "2026-03-05",
      "initials": "EE",
      "lastName": "Evans",
      "rawRow": 6,
      "schoolOfAttendance": "Mt Diablo Elementary School",
    },
    {
      "firstName": "Finn",
      "goals": [
        "By 4/12/2027, Finn will form lower-case letters with correct size and spacing in 4 of 5 samples.",
      ],
      "gradeLevel": "TK",
      "iepDate": "2026-04-12",
      "initials": "FF",
      "lastName": "Foster",
      "rawRow": 7,
      "schoolOfAttendance": "Mt Diablo Elementary School",
    },
    {
      "firstName": "Gia",
      "goals": [
        "By 5/9/2027, Gia will raise her hand and wait to be called on in 4 of 5 opportunities.",
      ],
      "gradeLevel": "1",
      "iepDate": "2026-05-09",
      "initials": "GG",
      "lastName": "Gomez",
      "rawRow": 8,
      "schoolOfAttendance": "Mt Diablo Elementary School",
    },
    {
      "firstName": "Hana",
      "goals": [
        "By 1/30/2027, Hana will answer wh- questions about a short story with 80% accuracy.",
      ],
      "gradeLevel": "2",
      "iepDate": "2026-01-30",
      "initials": "HH",
      "lastName": "Hunt",
      "rawRow": 9,
      "schoolOfAttendance": "Mt Diablo Elementary School",
    },
    {
      "firstName": "Ivan",
      "goals": [
        "By 2/22/2027, Ivan will write a three-sentence paragraph with a topic sentence in 4 of 5 samples.",
      ],
      "gradeLevel": "3",
      "iepDate": "2026-02-22",
      "initials": "II",
      "lastName": "Ingram",
      "rawRow": 10,
      "schoolOfAttendance": "Mt Diablo Elementary School",
    },
    {
      "firstName": "Jae",
      "goals": [
        "By 6/1/2027 Jae will:
- decode multisyllabic words
- read 100 wpm with 95% accuracy",
      ],
      "gradeLevel": "4",
      "iepDate": "2026-03-18",
      "initials": "JJ",
      "lastName": "Jones",
      "rawRow": 11,
      "schoolOfAttendance": "Mt Diablo Elementary School",
    },
  ],
  "warnings": [],
}
`;

exports[`parseCSVReport — SEIS Student Goals Report (CSV) per-role goal filtering snapshots kept-student and filtered-goal counts per role 1`] = `
{
  "counseling": {
    "goalsFiltered": 10,
    "students": 1,
  },
  "ot": {
    "goalsFiltered": 8,
    "students": 3,
  },
  "psychologist": {
    "goalsFiltered": 0,
    "students": 10,
  },
  "resource": {
    "goalsFiltered": 5,
    "students": 5,
  },
  "speech": {
    "goalsFiltered": 10,
    "students": 1,
  },
}
`;
